kubernetes/applications/infra/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  parentRefs:
    - name: private
      namespace: infra-tailscale # Explicitly points across namespaces to your Tailscale Gateway
  hostnames:
    - 'headlamp.private.${CLUSTER_DOMAIN}'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
